# Lead-Flow

./: .gitignore  README.md  app.py  build_exe.md  build_onefile.bat  build_onefile.ps1  db.py  index.html  launcher.py  package-lock.json  package.json  requirements.txt  tailwind.config.cjs  ui.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: 00_VISÃO_GERAL.md  01_HISTÓRICO_E_MOTIVAÇÃO.md  02_ARQUITETURA.md  03_STACK_E_DEPENDENCIAS.md  04_ESTRUTURA_DO_REPOSITORIO.md  05_FRONTEND.md  06_BACKEND_TAURI_RUST.md  07_DADOS_E_PERSISTENCIA.md  08_FLUXOS_E_DIAGRAMAS.md  09_BUILD_EXECUCAO_E_DEBUG.md  10_TESTES_QUALIDADE_E_CI.md  11_SEGURANCA_E_PERMISSOES.md  12_IMPORT_EXPORT_BACKUP_RESTORE.md  13_TROUBLESHOOTING.md  14_GLOSSARIO.md  15_RUNBOOK_SUPORTE.md  code-review-task-suggestions.md
scripts/: check-source-artifacts.mjs
src/: App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.test.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup_restore.rs  error_tags.rs  import_csv.rs  logging.rs  main.rs
src-tauri/src/legacy_snapshot/: main.rs
src/assets/: .gitkeep
src/components/: Badge.tsx  ConfirmDialog.tsx  FiltersBar.tsx  LeadCard.tsx  LeadModal.tsx  MetricCard.tsx  ProjectModal.tsx  ReportsPanel.tsx  StatCard.tsx
src/components/ui/: Button.tsx  Input.tsx  Select.tsx
src/constants/: options.ts
src/data/: locations.json
src/lib/: formatters.test.ts  formatters.ts  projectFinance.test.ts  projectFinance.ts
src/styles/: theme.css
src/theme/: meta.ts
